--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jspdf-autotable": "^3.5.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
